hphp/hack/test/typecheck/ternary6.php.exp
File "ternary6.php", line 6, characters 10-10:
Invalid return type (Typing[4336])
File "ternary6.php", line 6, characters 10-10:
Expected void because this function does not always return a value
File "ternary6.php", line 6, characters 15-21:
But got ?string
